parallax exists but is weird

--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: default
 ---
-{% include hero.html %}
+<style>
+.parallax {
+  /* The image used */
+  background-image: url({{"/images/" | prepend: site.baseurl | append : site.hero}});
+
+  /* Set a specific height */
+  min-height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
+
+<div class="parallax"></div>
+
+<div class="hero" style="background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 0, #fff 90%),
+ url({{"/images/" | prepend: site.baseurl | append : site.hero}})">
+  <div class="hero-content">
+    <h1 class="hero-title">{% if site.hero-title %}{{site.hero-title}}{% else %}Welcome to <span>Lokmont</span>{% endif %}</h1>
+    <div class="hero-description">{% if site.hero-description %}{{site.hero-description}}{% else %}A Responsive Jekyll Blog Theme. Theme suitable for any kind of creators.{% endif %}</div>
+  </div>
+</div> <!-- /.hero -->
 {% include info-box.html %}
 
 {% if paginator.page %}
