Centered name on front page

--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@ layout: default
 
 <div class="parallax"></div>
 
-<div class="hero-content">
-  <h1 class="hero-title">{% if site.hero-title %}{{site.hero-title}}{% else %}Welcome to <span>Lokmont</span>{% endif %}</h1>
-  <div class="hero-description">{% if site.hero-description %}{{site.hero-description}}{% else %}A Responsive Jekyll Blog Theme. Theme suitable for any kind of creators.{% endif %}</div>
+<div class="hero">
+  <div class="hero-content">
+    <h1 class="hero-title">{% if site.hero-title %}{{site.hero-title}}{% else %}Welcome to <span>Lokmont</span>{% endif %}</h1>
+    <div class="hero-description">{% if site.hero-description %}{{site.hero-description}}{% else %}A Responsive Jekyll Blog Theme. Theme suitable for any kind of creators.{% endif %}</div>
+  </div>
 </div>
+
+
 {% include info-box.html %}
 
 {% if paginator.page %}
